--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "parcel build ./src/index.js -o reaktion --no-cache",
+    "build":
+      "rm -rf ./dist && babel ./src -d ./dist --ignore 'src/**/*.spec.js'",
     "format": "prettier-eslint --write \"src/**/*.js\"",
     "test": "jest"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^22.4.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
