--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reaktion",
   "version": "0.0.1",
   "description": "Simple state management using context",
-  "main": "./dist/reaktion.js",
+  "main": "./dist/index.js",
   "author": "Marvin Frachet <marvin.frachet@gmail.com>",
   "license": "MIT",
   "private": false,
