--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "Marvin Frachet <marvin.frachet@gmail.com>",
   "license": "MIT",
   "private": false,
+  "homepage": "https://github.com/mfrachet/reaktion",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mfrachet/reaktion"
+  },
+  "keywords": ["react", "context"],
   "scripts": {
     "build":
       "rm -rf ./dist && babel ./src -d ./dist --ignore 'src/**/*.spec.js'",
