--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": ["react", "context"],
   "scripts": {
     "build":
-      "rm -rf ./dist && babel ./src -d ./dist --ignore 'src/**/*.spec.js'",
+      "rm -rf ./dist && NODE_ENV=production babel ./src -d ./dist --ignore 'src/**/*.spec.js'",
     "format": "prettier-eslint --write \"src/**/*.js\"",
     "test": "jest"
   },
@@ -24,6 +24,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.4.0",
     "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
