--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "reaktion",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Simple state management using context & hooks",
-  "main": "./dist/index.js",
+  "main": "./src/index.js",
   "author": "Marvin Frachet <marvin.frachet@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -16,7 +16,6 @@
     "context"
   ],
   "scripts": {
-    "build": "rm -rf ./dist && NODE_ENV=production babel ./src -d ./dist --ignore 'src/**/*.spec.js'",
     "format": "prettier-eslint --write \"src/**/*.js\"",
     "test": "jest"
   },
