--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,17 @@
 {
-  "presets": ["env", "react"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
   "env": {
     "production": {
-      "presets": ["minify"]
+      "presets": [
+        "minify"
+      ]
     }
   },
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-object-rest-spread"
+  ]
 }
