--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reaktion",
   "version": "1.0.0",
   "description": "Simple state management using context & hooks",
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "author": "Marvin Frachet <marvin.frachet@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -17,16 +17,17 @@
   ],
   "scripts": {
     "format": "prettier-eslint --write \"src/**/*.js\"",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "build": "NODE_ENV=production babel ./src --out-dir ./lib --ignore **/__tests__"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-preset-minify": "^0.4.0",
-    "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -39,6 +40,9 @@
     "prop-types": "^15.6.1",
     "react": "16.7.0-alpha.0",
     "react-dom": "16.7.0-alpha.0"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
   },
   "pre-commit": [
     "test",
