--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.6.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
-    "prettier-eslint-cli": "^4.7.1"
+    "prettier-eslint-cli": "^4.7.1",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0"
   },
-  "dependencies": {
-    "prop-types": "^15.6.1",
-    "react": "16.7.0-alpha.0",
-    "react-dom": "16.7.0-alpha.0"
+  "peerDependencies": {
+    "react": "^16.7.0-alpha.0"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
