chore(bundler): adding rollup (#8)

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   "scripts": {
     "format": "prettier-eslint --write \"src/**/*.js\"",
     "test": "jest --coverage",
-    "build": "NODE_ENV=production babel ./src --out-dir ./lib --ignore **/__tests__"
+    "build": "rollup -c"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
@@ -35,7 +34,11 @@
     "prettier": "^1.11.1",
     "prettier-eslint-cli": "^4.7.1",
     "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0"
+    "react-dom": "^16.7.0-alpha.0",
+    "rollup": "^0.67.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "peerDependencies": {
     "react": "^16.7.0-alpha.0"
