--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reaktion",
-  "version": "1.0.1",
-  "description": "Simple state management using context & hooks",
+  "version": "1.0.2",
+  "description": "useState like Hook for global state management",
   "main": "./lib/index.js",
   "author": "Marvin Frachet <marvin.frachet@gmail.com>",
   "license": "MIT",
